# mcp-kinetica

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  run_kinetica.sh
extra/: gpu-db.py  main-.py
mcp-env/: pyvenv.cfg
mcp-env-py311/: pyvenv.cfg
mcp_kinetica/: __init__.py  server.py  server_sqlgpt.py  server_util.py  sql_context.py  sqlgpt.py  table_monitor.py  table_tools.py
mcp_kinetica.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp_kinetica/features/: generate_sql.py  table_monitor.py  table_tools.py  util.py
src/: client.py  mcp_table_monitor.py  server.py
tests/: test_server.py  test_server_ki.py  test_server_li.py  test_server_sqlgpt.py
